--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -372,10 +372,13 @@ Sizes: [
 																						<table class="table" class="table" style="border: 1px solid #007e4f; border-radius: 5px; padding: 5px;">
 																							<thead>
 																							<tr>
-																								<th scope="col" style="text-align: center;">Division</th>
-																								<th scope="col" style="text-align: center;">GL Today</th>
-																								<th scope="col" style="text-align: center;">GL Today LY</th>
-																								<th scope="col" style="text-align: center;">Fine Leaf</th>
+																								<th scope="col" style="text-align: center;">Div</th>
+																								<th scope="col" style="text-align: center;">Today</th>
+																								<th scope="col" style="text-align: center;">Today LY</th>
+																								<th scope="col" style="text-align: center;">Todate</th>	
+																								<th scope="col" style="text-align: center;">Todate LY</th>
+																								<th scope="col" style="text-align: center;">FL%</th>
+																								<th scope="col" style="text-align: center;">FL% LY</th>
 																							</tr>
 																							</thead>
 																							<tbody>
@@ -384,10 +387,22 @@ Sizes: [
 																								<td style="text-align: center;">{{ item['Division'] }}</td>
 																								<td style="text-align: center;">{{ item['GLToday'] }}</td>
 																								<td style="text-align: center;">{{ item['GLTodayLY'] }}</td>
+																								<td style="text-align: center;">{{ item['GLTodate'] }}</td>
+																								<td style="text-align: center;">{{ item['GLTodateLY'] }}</td>
 																								<td style="text-align: center;">{{ item['FineLeaf'] }}</td>
+																								<td style="text-align: center;">{{ item['FineLeafLY'] }}</td>
 																							</tr>
 																							{% endfor %}
 																							</tbody>
+																							<tr style="border: 1px solid #007e4f; font-weight: bold;">
+																								<td style="text-align: center;">Total</td>
+																								<td style="text-align: center;">{{ data['Greenleaf'] | total(column='GLToday') }}</td>
+																								<td style="text-align: center;">{{ data['Greenleaf'] | total(column='GLTodayLY') }}</td>
+																								<td style="text-align: center;">{{ data['Greenleaf'] | total(column='GLTodate') }}</td>
+																								<td style="text-align: center;">{{ data['Greenleaf'] | total(column='GLTodateLY') }}</td>
+																								<td style="text-align: center;"></td>
+																								<td style="text-align: center;"></td>
+																							</tr>
 																						</table>
 																					</div>
 
@@ -399,6 +414,7 @@ Sizes: [
 																								<th scope="col" style="text-align: center;">TM Today</th>
 																								<th scope="col" style="text-align: center;">TM To date</th>
 																								<th scope="col" style="text-align: center;">TM Todate LY</th>
+																								<th scope="col" style="text-align: center;">+ / -</th>
 																								<th scope="col" style="text-align: center;">Recovery Today</th>
 																								<th scope="col" style="text-align: center;">Recovery Todate</th>
 																							</tr>
@@ -409,6 +425,7 @@ Sizes: [
 																								<td style="text-align: center;">{{ item['TMToday'] }}</td>
 																								<td style="text-align: center;">{{ item['TMTodate'] }}</td>
 																								<td style="text-align: center;">{{ item['TMTodateLY'] }}</td>
+																								<td style="text-align: center;">{{ item['Difference'] }}</td>
 																								<td style="text-align: center;">{{ item['RecoveryToday'] }}</td>
 																								<td style="text-align: center;">{{ item['RecoveryTodate'] }}</td>
 																							</tr>
@@ -433,6 +450,10 @@ Sizes: [
 																								<td style="text-align: center;">{{ item['Mandays'] }}</td>
 																							</tr>
 																							{% endfor %}
+																							<tr style="border: 1px solid #007e4f; font-weight: bold;">
+																								<td style="text-align: center;">Total</td>
+																								<td style="text-align: center;">{{ data['Mandays'] | total(column='Mandays') }}</td>
+																							</tr>
 																							</tbody>
 																						</table>
 																					</div>
